# launchii

./: .gitignore  README.md  appsearch.py  cli.py  colours.py  crosssearch.py  gui.py  launchii.py  macappsearch.py  pyproject.toml  requirements.txt  test_requirements.txt
launchii/: actions.py  api.py  appsearch.py  cli.py  colours.py  core.py  crosssearch.py  gui.py  launchii.py  macappsearch.py  openaction.py  plugins.py
launchiicontrib/appsearch/: __init__.py  appsearch.py
launchiicontrib/openaction/: __init__.py  openaction.py
tests/: test_appsearch.py  test_launchii.py  test_macappsearch.py  test_main.py  test_openaction.py
tests/launchii/: test_core.py  test_launchii.py  test_plugins.py
tests/launchiicontrib/appsearch/: test_appsearch.py
tests/launchiicontrib/openaction/: test_openaction.py
